--- a/clock.desktop
+++ b/clock.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Exec=/home/vincent/python/clock-py/dist/clock-gui/clock-gui
+Exec=~/.clock/clock-gui/clock-gui
 Name=Clock
-Icon=/home/vincent/Téléchargements/clock.jpg
+Icon=~/.clock/clock.jpg
