--- a/clock.desktop
+++ b/clock.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Exec=~/.clock/clock-1.1-linux/clock-gui
+Exec=~/.clock/clock-gui/clock-gui
 Name=Clock
-Icon=~/.clock/clock-gui/clock.jpg
+Icon=~/.clock/clock-py/clock.jpg
